--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 spring.application.name=chatop
+spring.profiles.active=dev
 server.port=3001
 
 logging.level.root=error
 logging.level.com.chatop=info
+logging.level.org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration=OFF
 
+# database connection
 spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=jdbc:mysql://localhost:3306/chatop
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
+
+# show sql request in the run
+spring.jpa.show-sql=true
