--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,8 @@ spring.application.name=chatop
 spring.profiles.active=dev
 server.port=3001
 
-logging.level.root=error
+#logging.level.root=error
 logging.level.com.chatop=info
-logging.level.org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration=OFF
 
 # database connection
 spring.config.import=optional:file:.env[.properties]
@@ -18,3 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # show sql request in the run
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
