feat: installation d'une base de toute pour l'authentification.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=chatop
 spring.profiles.active=dev
 server.port=3001
+server.servlet.context-path=/api
 
 #logging.level.root=error
 logging.level.com.chatop=info
