--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=chatop
 spring.profiles.active=dev
 server.port=3001
 server.servlet.context-path=/api
+springdoc.api-docs.path=/api-docs
 
 #logging.level.root=error
 logging.level.com.chatop=info
@@ -14,7 +15,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # show sql request in the run
 spring.jpa.show-sql=true
