--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.profiles.active=dev
 server.port=3001
 server.servlet.context-path=/api
 springdoc.api-docs.path=/api-docs
+server.base-pictures-url=http://localhost:3001/pictures/
 
 #logging.level.root=error
 logging.level.com.chatop=info
