refactor: le path url permettant la sauvegarde des images est stocké dans une variables d'environnement.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.profiles.active=dev
 server.port=3001
 server.servlet.context-path=/api
 springdoc.api-docs.path=/api-docs
+
+# saving picture
+path.saving.picture=src/main/resources/static/pictures
 server.base-pictures-url=http://localhost:3001/pictures/
 
 #logging.level.root=error
