--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ springdoc.api-docs.path=/api-docs
 path.saving.picture=src/main/resources/static/pictures
 server.base-pictures-url=http://localhost:3001/pictures/
 
-#logging.level.root=error
+# logging.level.root=error
 logging.level.com.chatop=info
 
 # database connection
@@ -26,6 +26,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# jwt
+# jwt parameters
 chatop.app.jwtSecret=${JWT_KEY}
 chatop.app.jwtExpirationMs=86400000
