refactor: changement d'emplacement des images sauvegardées.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/api
 springdoc.api-docs.path=/api-docs
 
 # saving picture
-path.saving.picture=src/main/resources/static/pictures
+path.saving.picture=C:\\Documents\\projet4.pictures\\
 server.base-pictures-url=http://localhost:3001/pictures/
 
 # logging.level.root=error
