fix: dernières adaptations au front de l'application. refactor.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ springdoc.api-docs.path=/api-docs
 
 # saving picture
 path.saving.picture=C:\\Documents\\projet4.pictures\\
-server.base-pictures-url=http://localhost:3001/pictures/
+server.base-pictures-url=http://localhost:3001/api/pictures/
 
 # logging.level.root=error
 logging.level.com.chatop=info
